CSS/styles.css
/* =================================
  Base Element Styles
==================================== */

* {
  box-sizing: border-box;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  text-align: center;
}

body img {
  max-width: 100%;
}

.main__header,
footer {
  background-color: #f7f7f7;
  padding: 24px 10px;
}

h1 {
  font-size: 25px;
  margin-top: 0;
}

h2 {
  margin: 40px 0;
  font-weight: bold;
  text-transform: uppercase;
}

h3 {
  font-weight: 400;
}

p {
  color: #808080;
}

a {
  color: black;
  text-decoration: none;
}

/* =================================
  Base Layout Styles
==================================== */

/* ---- Navigation ---- */

.nav__list {
  display: flex;
  flex-direction: column;
  font-weight: bold;
  list-style: none;
  padding-left: 0;
  text-transform: uppercase;
}

.nav__list li {
  background-color: white;
  margin: .25em 0;
  padding: 1em 0;
}

/* ---- Layout Containers ---- */

.intro {
  background-color: #f7f7f7;
  padding: 0 0;
}

.intro__img {
  margin-top: 30px;
  width: 65%;
}

.intro__copy {
  padding: 0 10px 40px;
}

.portfolio {
  background-color: white;
  padding: 0 10px;
}

.box {
  font-weight: normal;
  margin: 40px 0 50px;
}

.box img {
  margin-bottom: 10px;
}

.contact__box {
  margin-bottom: 50px;
}

.contact__title{
  font-size: 14px;
  font-weight: bold;
  margin: 20px 0;
  text-transform: uppercase;
}

.contact__item {
  margin-bottom: 15px;
  margin-top: 0;
  padding: 0;
}

.contact__item_bold {
  font-weight: bold;
}

.horizontal-line {
  border-top: 1px solid lightgray;
  margin: 20px 10px;
}

.footer__section{
  display: flex;
  font-size: 14px;
  font-weight: bold;
  justify-content: space-between;
  padding: 10px 10px;
  text-decoration: none;
}

/* .footer__section a {
  color: black;
  text-decoration: none;
  text-transform: uppercase;
} */

.footer__link-to-top {
  color: black;
  padding-left: 80px;
  text-decoration: none;
  text-transform: uppercase;
}

.footer__nav {
  display: none;
}


/* =================================
  Media Queries
==================================== */

@media (min-width:768px){
  .nav__list{
    flex-direction: row;
    justify-content: center;
  }

  .nav__list li {
    background-color: #f7f7f7;
    margin: 0 10px;
  }

  .intro {
    display: flex;
    font-size: 18px;
    padding: 0 20px 30px;
    text-align: left;
  }

  .intro__img {
    margin: 20px 0;
    order: 2;
    width: 40%;
  }

  .portfolio {
    display: flex;
    flex-wrap: wrap;
    margin: 0 auto;
    max-width: 1500px;
    justify-content: center;
    width: 95%;
  }

  .portfolio__title {
    flex-basis: 100%;
  }

  .box {
    flex: 1 45%;
    margin: 10px;
  }

  .contact__box {
    font-size: 18px;
    padding: 0 115px;
  }

  .footer__section {
    align-items: center;
  }

  .footer__link-to-top {
    display: none;
  }

  .footer__nav {
    display: flex;
    align-items: center;
    list-style: none;
  }

  .footer__nav li {
    margin: 0 10px
  }
}

@media (min-width:1024px){
  body {
    background-color: #f7f7f7;
  }

  .main__header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 50px;
  }

  .name {
    font-size: 30px;
  }

  .intro {
    display: flex;
    font-size: 22px;
    padding: 0 60px 40px;
  }

  .intro__img {
    width: 100%;
  }

  .intro__copy{
    padding: 0 250px 0 0;
  }

  .box {
    flex: 1 25%;
    margin: 10px;
  }

  .contact__box {
  font-size: 18px;
  padding: 0 420px;
  }

  footer{
    padding: 30px 30px;
  }

}

